# openvision-core-plugin

./: .travis.yml  README.md  build.sh  configure.ac
.github/workflows/: coreplugin.yml  ovbot.yml
CI/: build.sh  futurize.sh
po/: Makefile.am  Vision.pot  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  updateallpo-multiOS.sh  updateallpo.sh  (+3 more)
src/: BackupManager.py  ClientModeBox.py  GBIpboxWizard.py  H9SDmanager.py  IPKInstaller.py  ImageManager.py  Makefile.am  MountManager.py  Multibootmgr.py  RestoreWizard.py  ScriptRunner.py  SoftcamManager.py  SwapManager.py  __init__.py  clientmodebox.xml  gbipboxwizard.xml  plugin.py  restorewizard.xml  setup.xml  ui.py
src/images/: Makefile.am
